PR 3 — Docs: one path forward (droplet + AuraDB Free) (#795)
* docs: one path forward — droplet + AuraDB Free (PR 3)

Rewrite the deployment docs to the single shipped production path
(droplet app+Caddy → AuraDB Free), verified against what PRs #793/#794
actually merged — including the rehearsal/review deviations (post-gate
rollback tag, UID 10001 chown, APP_* env rename, useradd -m,
.dockerignore, outermost SecurityHeadersMiddleware, five-route journals
gate, SIGNUP_INVITE_CODE via get_credential, 200k/400k Free caps):

- DO_MIGRATION_GUIDE.md → Droplet Deployment Guide + operations runbook
  (weekly in-container telemetry-retention cron, Aura on-demand-snapshot
  backup story + count-export integrity record, uptime pinger on
  /health, log access, rollback procedure, hardening checklist).
  Filename kept for link stability.
- AURADB_MIGRATION_GUIDE.md → pure Free-tier data migration: prune →
  export counts → dump → console upload → env cutover → boot-once
  schema auto-creation → --compare verification. § 6.2 numbering
  preserved (AURA-TEMPORARY checklist target cited from both compose
  files, k8s manifests, and ADR-080). Stale HuggingFace-embeddings
  claim fixed to ADR-068 (OpenAI).
- NEO4J_SETUP_MIGRATION_SUMMARY.md: decision-change appendix — Stage 2
  (App Platform + Neo4j droplet) skipped; path collapsed.
- CLAUDE.md § Neo4j Infrastructure: three stages → local vs production.
- docs/INDEX.md deployment section: new titles/descriptions/dates.
- infrastructure/README.md: LOCAL-dev-only banner; deleted stale
  future-services table, GenAI-plugin claim, FUTURE_SERVICES.md pointer,
  App Platform-era production examples.
- .claude/skills/docker/SKILL.md: rewritten to the two real contexts
  (local / droplet) with the shipped compose inventory, Caddyfile, and
  the Dockerfile lessons from the rehearsal.
- security-hardening-deferred.md: headers item marked done (PR #794);
  register-throttle and slowapi/Redis claims corrected to
  adapters/inbound/rate_limit.py